# calia

./: Cargo.toml  README.md
calia/: Cargo.toml
calia-macro/: Cargo.toml
calia-macro-lib/: Cargo.toml
calia-macro-lib/src/: expressions.rs  keywords.rs  lib.rs  make_build.rs  make_dialect.rs  make_expression.rs  make_query.rs  make_query2.rs  make_table.rs  tests.rs
calia-macro/src/: lib.rs
calia-postgresql/: Cargo.toml
calia-postgresql/src/: lib.rs
calia-sqlx/: Cargo.toml
calia-sqlx/src/: lib.rs
calia/examples/: basic.rs
calia/src/: components.rs  functions.rs  lang.rs  lib.rs  operators.rs  prelude.rs
