[workspace]
resolver = "3"
members = ["calia", "calia-macro", "calia-macro-lib", "calia-sqlx"]

[workspace.package]
name = "calia"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
calia = { path = "calia", version = "0.1.0" }
calia-macro = { path = "calia-macro", version = "0.1.0" }
calia-macro-lib = { path = "calia-macro-lib", version = "0.1.0" }

calia-sqlx = { path = "calia-sqlx", version = "0.1.0" }

cgp = { version = "0.4.1" }
